feat: Implement payment methods system and preferred currency support
🚀 Payment Methods System:
- Add PaymentMethod entity with secure card masking
- Implement PaymentMethodRepository with optimized queries
- Create PaymentMethodService with business logic
- Add PaymentMethodController with REST endpoints
- Include PaymentMethodDTO and PaymentMethodRequest DTOs
- Add comprehensive validation and security features

💱 Preferred Currency Support:
- Add preferredCurrency field to User entity (default: EUR)
- Update UserDTO to include preferredCurrency
- Create RegisterRequest payload for registration
- Update AuthController to handle preferredCurrency
- Update UserService mapping for DTO conversion
- Add database migration for preferred_currency column

🔒 Security & Configuration:
- Update SecurityConfig to allow /api/user/payments/**
- Update CorsConfig to support X-User-Id and X-Admin-Token headers
- Add comprehensive API documentation
- Include database migration scripts

📚 Documentation:
- Add PAYMENT_API_ENDPOINTS.md with complete API reference
- Add PREFERRED_CURRENCY_API.md with integration guide
- Include React examples and testing instructions

✅ Features:
- Secure card number masking (never store full numbers)
- Luhn algorithm validation for card numbers
- Automatic expiry date validation
- Limit of 5 payment methods per user
- Default payment method management
- Statistics and cleanup endpoints
- Real-time validation without saving
- Full CORS support for frontend integration

🎯 Ready for production deployment on Render